# CortexBrain

./: .gitignore  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  build-all.sh  doc.md  generazione.xlsx  requirements.txt  testAnalysis.py  testLib.py
.github/: CODEOWNERS  auto-reviewer-assign.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: auto-assign.yml  auto-reviewer-assign.yml  core-build-checks.yml  publish-cli-version.yml  trello-link.yml  update-doc.yml
API/: DataGatherer.py  SendData.py
Analyze/: analyze.py  generazione.xlsx  models.py  testAnalysis.py
Application/: MUST_READ.md
Application/App/: README.txt  app.py
Application/Console/: RWDatas.py
Config/: CONFIG_README.txt  dbConfig.py
Doc/: mkdocs.yml
Doc/docs/: index.md
Examples/: Readme.md  basic_sensor.py  checkLibs.py  gps_sensor.py  map_sensors.py  movingGps_sensor.py  sensor_map_tutorial.html
Examples /SyntheticDatas/: CityModel.py  generateDatas.py  generateDatasV2.py
Examples/utils/: DataProcessor.py  PlotDatas.py  jsonEncoder.py
Gui/App/: ConnectionEstablished.ui  SplashScreen.ui  app.py  coapConnector.py  config.json  gui.py  httpConnector.py  loginWindow2.ui  mqttConnector.py  style.css
Gui/Console/: README.txt  RWDatas.py
Gui/output/: DistanceFromPoi.csv  POI.csv
RealWorld/Console/: RWDatas.py
Scripts/: check-cortexflow-components.sh  check-dev-requisites.sh  install-debugging-tools.sh  install-injector.sh  install.sh  test-connections.sh  test-proxy-endpoints.sh  test-proxy-ports.sh  test-sidecar-advanced-tcp.sh  test-sidecar-advanced-udp.sh  test-sidecar-proxy.sh  uninstall.sh
SyntheticDatas/: CityModel.py  README.txt  TouristModel.py  generateDatas.py  generateDatasV2.py  params.json
SyntheticDatas/GPUIntegration/: CUDA.py
cli/: Cargo.toml
cli/src/: errors.rs  essential.rs  general.rs  install.rs  logs.rs  main.rs  mod.rs  monitoring.rs  policies.rs  service.rs  status.rs  uninstall.rs
core/: .dockerignore  CORE_MUST_READ.md  Cargo.toml  Core-Setup&Requirements.MD  Dockerfile  Readme.md  SetupRequirements.md  agent-api-build.sh  build.rs
core/api/: Cargo.toml  Dockerfile  build.rs  config.yaml
core/api/protos/: agent.proto
core/api/src/: agent.rs  api.rs  client.rs  constants.rs  helpers.rs  lib.rs  main.rs  mod.rs  requests.rs  structs.rs
core/common/: Cargo.toml
core/common/src/: constants.rs  formatters.rs  lib.rs  logger.rs  map_handlers.rs  program_handlers.rs
core/kubeedge-wrapper/: go.mod  go.sum  kubeedge.go  libkubeedge.h  readme.md
core/src/: lib.rs  main.rs
core/src/client/: Cargo.toml  Dockerfile  apiconfig.rs  client-build.sh  client.rs  config.yaml  default_api_config.rs  mod.rs  validation.rs
core/src/client/client/config/: apiconfig.rs  mod.rs
core/src/client/src/: client.rs  default_api_config.rs  main.rs  mod.rs  params.rs
core/src/components/conntracker/: Cargo.toml  build-conntracker.sh  build.rs
core/src/components/conntracker/src/: bindings.rs  data_structures.rs  main.rs  mod.rs  offsets.rs  tc.rs  tcp_analyzer.rs  veth_tracer.rs
core/src/components/edgecni/: Cargo.toml
core/src/components/identity/: Cargo.toml  Dockerfile  build-identity.sh  conntracker
core/src/components/identity/src/: enums.rs  helpers.rs  lib.rs  main.rs  map_handlers.rs  mod.rs  structs.rs
core/src/components/kernel/: Cargo.toml  Dockerfile  _.rs  build-kernel.sh  kafka.rs
core/src/components/kernel/src/: corefile.rs  kernel.rs  main.rs  mod.rs  proxy_msg.proto
core/src/components/loadbalancer/: Cargo.toml  Dockerfile  build-lb.sh  mod.rs
core/src/components/loadbalancer/src/: discovery.rs  loadbalancer.rs  main.rs  metrics.rs  mod.rs  shared_struct.rs
core/src/components/maps/: Cargo.toml
core/src/components/maps/src/: lib.rs  map.rs
core/src/components/metrics/: Cargo.toml  Dockerfile  build-metrics.sh
core/src/components/metrics/src/: helpers.rs  main.rs  maps_handlers.rs  mod.rs  program_handlers.rs  structs.rs
core/src/components/metrics_tracer/: Cargo.toml  build-metrics-tracer.sh
core/src/components/metrics_tracer/src/: data_structures.rs  main.rs  mod.rs
core/src/components/proxy/: Cargo.toml  Dockerfile  build-proxy.sh
core/src/components/proxy-injector/: Cargo.toml  Dockerfile  build-proxy-injector.sh
core/src/components/proxy-injector/src/: inject.rs  main.rs  mod.rs  validation.rs  vars.rs
core/src/components/proxy/src/: discovery.rs  main.rs  map.rs  messaging.rs  mod.rs  proxy.rs  vars.rs
core/src/components/xdp/: Cargo.toml  build.sh  requirements.txt
core/src/components/xdp/src/: filter.rs  lib.rs  main.rs  mod.rs
core/src/developers_msg/: developers_msg.rs
core/src/dns/: coredns_explain.md  corefile.rs  functions.md  kernel.rs  mod.rs
core/src/edgecni/: cidr_expl.md  edgecni.rs  mod.rs
core/src/kernel/: coredns_explain.md  corefile.md  corefile.rs  kernel.rs  mod.rs  utilities.rs
core/src/loadbalancer/: loadbalancer.rs
core/src/shared/: Cargo.toml
core/src/shared/src/: apiconfig.rs  default_api_config.rs  developers_msg.rs  lib.rs  mod.rs
core/src/test-pod/: edge-pod.yaml
core/src/testing/: admission-webhook.yaml  agent.yaml  certificate-manager.yaml  chaos-mess.yaml  client-deployment.yaml  cloud-pod.yaml  configmap-role.yaml  configmap.yaml  coredns-clusterrole.yaml  coredns-config.yaml  coredns-rolebinding.yaml  cortexflow-rolebinding.yaml  deploy-test-pod.yaml  dns-deployment.yaml  identity.yaml  install.sh  loadbalancer.yaml  metrics.yaml  otel_agent.yaml  pod-reader-role.yaml  pod.yaml  proxy-injector.yaml  proxy.yaml  rolebinding.yaml  service-reader-role.yaml
core/src/utilities/: mod.rs  utilities.rs
core/xtask/: Cargo.toml
core/xtask/src/: main.rs
dashboard/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js  webpack.config.js
utils/: DataGatherer.py  DataProcessor.py  PlotDatas.py  SendData.py  jsonEncoder.py  jsonEncoding.py
(+118 files in other folders)
