[package]
name = "cortexflow-cli"
version = "0.1.2"
edition = "2024"
description = "CortexFlow command line interface made to interact with the CortexBrain core components"
authors = ["Lorenzo Tettamanti", "Pranav Verma", "Lorenzo Bradanini"]
documentation = "https://docs.cortexflow.org"
homepage = "https://docs.cortexflow.org"
repository = "https://github.com/CortexFlow/CortexBrain"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.41"
tokio = "1.47.0"
anyhow = "1.0.98"
api = { path = "../core/api" }
tonic = "0.14.1"
tonic-reflection = "0.14.1"
tokio-stream = "0.1.17"
prost-types = "0.14.1"
prost = "0.14.1"

[[bin]]
name = "cfcli"
path = "src/main.rs"
