[package]
name = "cortexflow-cli"
version = "0.1.3"
edition = "2024"
description = "CortexFlow command line interface made to interact with the CortexBrain core components"
authors = ["Lorenzo Tettamanti", "Pranav Verma", "Lorenzo Bradanini","Siddharth Sutar","Andrea Bozzo"]
documentation = "https://docs.cortexflow.org"
homepage = "https://docs.cortexflow.org"
repository = "https://github.com/CortexFlow/CortexBrain"
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.41"
tokio = {version = "1.47.0",features = ["macros",'rt-multi-thread']}
anyhow = "1.0.98"
tonic = "0.14.1"
tonic-reflection = "0.14.1"
prost-types = "0.14.1"
prost = "0.14.1"
cortexflow_agent_api = {path = "../core/api",features = ["client"]}
kube = "2.0.1"
k8s-openapi = {version = "0.26.0", features = ["v1_34"]}

[[bin]]
name = "cfcli"
path = "src/main.rs"
