[package]
name = "cortexflow-cli"
version = "0.1.4-bf1"
edition = "2024"
description = "CortexFlow command line interface made to interact with the CortexBrain core components"
authors = ["Lorenzo Tettamanti", "Pranav Verma", "Lorenzo Bradanini","Siddharth Sutar","Andrea Bozzo"]
documentation = "https://docs.cortexflow.org"
homepage = "https://docs.cortexflow.org"
repository = "https://github.com/CortexFlow/CortexBrain"
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.44"
tokio = {version = "1.49.0",features = ["macros",'rt-multi-thread']}
anyhow = "1.0.100"
tonic = "0.14.2"
tonic-reflection = "0.14.2"
prost-types = "0.14.3"
prost = "0.14.3"
cortexflow_agent_api = {version = "0.1.1",features = ["client"]}
kube = "2.0.1"
k8s-openapi = {version = "0.26.0", features = ["v1_34"]}

[[bin]]
name = "cfcli"
path = "src/main.rs"
