[package]
name = "core"
version = "0.1.0"
edition = "2021"  # Rust edition, don't change

[workspace]
members = [
    "src/components/kernel",
    "src/components/loadbalancer",
    "api",
    "src/shared",
    "src/components/proxy",
    "src/components/xdp",
    "src/components/maps",
    "src/components/conntracker",
    "xtask",
    "src/components/identity",
    "src/components/metrics_tracer",
    "src/components/metrics",
]
