[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
prost = "0.14.1"
tokio = { version = "1.47.0", features = ["full"] }
tonic = "0.14.0"
tonic-prost = "0.14.0"
tracing = "0.1.41"
aya = "0.13.1"
identity = { path = "../src/components/identity" }
cortexbrain-common = { path = "../common" }
tonic-reflection = "0.14.0"
tonic-build = "0.14.0"
tracing-subscriber = "0.3.19"
tokio-stream = "0.1.17"
bytemuck = {version ="1.23.0"}
bytemuck_derive = "1.10.1"

[build-dependencies]
tonic-build = "0.14.0"
tonic-prost-build = "0.14.0"

[lib]
name = "agent_api"
path = "src/lib.rs"

[[bin]]
name = "agent-api"
path = "src/main.rs"
