[package]
name = "cortexflow_agent_api"
version = "0.1.0"
edition = "2021"
description = "CortexFlow agent API"
authors = ["Lorenzo Tettamanti", "Pranav Verma", "Lorenzo Bradanini","Siddharth Sutar","Andrea Bozzo"]
documentation = "https://docs.cortexflow.org"
homepage = "https://docs.cortexflow.org"
repository = "https://github.com/CortexFlow/CortexBrain"
license = "Apache-2.0"
readme = "../../README.md"


[dependencies]
anyhow = "1.0.100"
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.41"
aya = "0.13.1"
tonic-reflection = "0.14.2"
tonic-build = "0.14.2"
tracing-subscriber = "0.3.20"
tokio-stream = "0.1.17"
bytemuck = {version ="1.24.0"}
bytemuck_derive = "1.10.1"
cortexflow_identity = { version = "0.1.0", path = "../src/components/identity" }

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[lib]
name = "agent_api"
path = "src/lib.rs"

[[bin]]
name = "agent-api"
path = "src/main.rs"
