[package]
name = "cortexbrain-common"
version = "0.1.0"
edition = "2024"
description = "CortexFlow common packages"
license = "Apache-2.0"
readme = "../../README.md"
documentation = "https://docs.cortexflow.org"
homepage = "https://docs.cortexflow.org"
repository = "https://github.com/CortexFlow/CortexBrain"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
kube = { version = "2.0.1", features = ["client"] }
k8s-openapi = { version = "0.26.0", features = ["v1_34"] }
aya = "0.13.1"

[features]
map-handlers = []
program-handlers = []
