[package]
name = "cortexflow_identity"
version = "0.1.1"
edition = "2024"
description = "CortexFlow identity service package"
license = "Apache-2.0"
readme = "../../../../README.md"
documentation = "https://docs.cortexflow.org"
homepage = "https://docs.cortexflow.org"
repository = "https://github.com/CortexFlow/CortexBrain"

[features]
default = ["struct", "enums"]
struct = []
enums = []
experimental = ["struct", "enums"]


[dependencies]
aya = "0.13.1"
bytes = "1.4"
tokio = { version = "1.48.0", features = [
    "rt",
    "rt-multi-thread",
    "signal",
    "fs",
    "time",
    "macros",
] }
anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
bytemuck = { version = "1.23.0", features = ["derive"] }
bytemuck_derive = "1.10.1"
cortexbrain-common = { path = "../../../common/", features = ["map-handlers"] }
nix = { version = "0.30.1", features = ["net"] }
kube = { version = "2.0.1", features = ["client"] }
k8s-openapi = { version = "0.26.0", features = ["v1_34"] }
