[package]
name = "cortexflow_identity"
version = "0.1.1"
edition = "2024"
description = "CortexFlow identity service package"
license = "Apache-2.0"
readme = "../../../../README.md"
documentation = "https://docs.cortexflow.org"
homepage = "https://docs.cortexflow.org"
repository = "https://github.com/CortexFlow/CortexBrain"

[features]
default = ["map-handlers", "struct", "enums"]
map-handlers = []
struct = []
enums = []
experimental = ["map-handlers", "struct", "enums"]


[dependencies]
aya = "0.13.1"
bytes = "1.11"
tokio = { version = "1.49.0", features = [
    "rt",
    "rt-multi-thread",
    "signal",
    "fs",
    "time",
    "macros",
] }
anyhow = "1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
libc = "0.2.180"
bytemuck = { version = "1.23.0", features = ["derive"] }
bytemuck_derive = "1.10.1"
cortexbrain-common = "0.1.0"
nix = { version = "0.31.1", features = ["net"] }
kube = { version = "3.0.0", features = ["client"] }
k8s-openapi = { version = "0.27.0", features = ["v1_34"] }
