[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"  
clap = "4.5.29"  
tokio = { version = "1", features = ["full"] }  
tracing = "0.1.40"
futures = "0.3.31"
anyhow = "1.0.93"
schemas = "0.4.0"
yaml-rust2 = "0.10.0"
kube = { version = "0.98.0", features = ["runtime", "derive", "ws"]}
k8s-openapi = { version = "0.24.0", features = ["latest"] }
serde_json = "1.0.133"
tokio-util = { version = "0.7.8", features = ["io"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
hyper-util = "0.1.10"
tower = "0.5.1"
ipnet = "2.10.1"
iptables = "0.5.2"
itertools = "0.14.0"
libc = "0.2.164"
libloading = "0.8.5"
libp2p = "0.55.0"
serde_yaml = "0.9.34"
pnet = "0.35.0"
bytes = "1.9.0"
prost = "0.13.5"
rdkafka = "0.37.0"
trust-dns-server = "0.23.2"
dirs = "6.0.0"

[dependencies.shared]    
path = "../../shared"      

[[bin]]
name = "kernel"
path = "src/main.rs"
