[package]
name = "loadbalancer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
aya = "0.13.1"
aya-log = "0.2.1"
log = "0.4.27"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
bytemuck = {version ="1.23.2",features = ["derive"]}
serde = "1.0.219"
serde_json = "1.0.142"
prometheus = "0.14.0"
lazy_static = "1.5.0"
kube = "1.1.0"
base64 = "0.22.1"
k8s-openapi = { version = "0.25.0", features = ["v1_32"] }
warp = "0.4.1"
kube-runtime = "1.1.0"

[dependencies.shared]
path = "../../shared"
