[package]
name = "loadbalancer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
aya = "0.13.1"
aya-log = "0.2.1"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
bytemuck = {version ="1.23.0",features = ["derive"]}
serde = "1.0.219"
serde_json = "1.0.140"
prometheus = "0.14.0"
lazy_static = "1.5.0"
kube = "1.1.0"
base64 = "0.22.1"
k8s-openapi = { version = "0.25.0", features = ["v1_32"] }
warp = "0.3.7"
kube-runtime = "1.1.0"

[dependencies.shared]
path = "../../shared"
