[package]
name = "proxy-injector"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
base64 = "0.22.1"
futures = "0.3.31"
hyper = "1.6.0"
lazy_static = "1.5.0"
rustls = "0.23.26"
rustls-pemfile = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
