[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
dashmap = "6.1.0"
hyper = "1.6.0"
k8s-openapi = "0.24.0"
kube = "0.98.0"
kube-runtime = "0.99.0"
lazy_static = "1.5.0"
prometheus = "0.13.4"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
warp = "0.3.7"

[dependencies.shared]    
path = "../../shared"      

[[bin]]
name = "proxy"
path = "src/main.rs"

