[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
dashmap = "6.1.0"
hyper = "1.6.0"
k8s-openapi = "0.24.0"
kube = "0.98.0"
kube-runtime = "0.99.0"
lazy_static = "1.5.0"
prometheus = "0.13.4"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
warp = "0.3.7"
time = "=0.3.41"
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
bytemuck = "1.22.0"
aya = "0.13.1"
once_cell = { version = "1.20.3" }

[dependencies.shared]
path = "../../shared"

[build-dependencies]
which = { version = "7.0.0", default-features = false }

[[bin]]
name = "proxy"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[patch.crates-io]
once_cell = "1.20.3"
