[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
dashmap = "6.1.0"
hyper = "1.7.0"
k8s-openapi = "0.25.0"
kube = "1.1.0"
kube-runtime = "1.1.0"
lazy_static = "1.5.0"
prometheus = "0.14.0"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
warp = "0.4.2"
time = "=0.3.42"
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
bytemuck = "1.23.2"
aya = "0.13.1"
once_cell = { version = "1.20.3" }

[dependencies.shared]
path = "../../shared"

[build-dependencies]
which = { version = "8.0.0", default-features = false }

[[bin]]
name = "proxy"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[patch.crates-io]
once_cell = "1.20.3"
