[package]
name = "xdp-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
network-types = "0.0.8"

[build-dependencies]
which = { version = "7.0.0", default-features = false }

[[bin]]
name = "xdp"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[target.bpfel-unknown-none]
linker = "bpf-linker"
rustflags = [
    "-C", "panic=abort",
    "-C", "target-feature=+alu32",
    "-C", "link-args=-znotext",
]
